--- a/sioux_mach_learn_project.Rmd
+++ b/sioux_mach_learn_project.Rmd
@@ -798,5 +798,5 @@ confusionMatrix(svm_prediction_tuned,df_test_svm$stroke)
 
 
 # Conclusion
-All our approaches lead to interesting outcomes. The accuracy of the models(SVM,NN,GAM) range betwenn 94% - 95%, means the predicitions calculated, compared to the test data was quiet accurate. Nevertheless, when we have a closer look at the all the confusionmattrix of each model, it is clearly visible, that these models cannot really predict a stroke or which factor could increase the risk of having a stroke.
+All our approaches lead to interesting outcomes. The accuracy of the models(SVM,NN,GAM) range between 94% - 95%, means the predictions calculated, compared to the test data was quiet accurate. Nevertheless, when we have a closer look at the all the confusion matrix of each model, it is clearly visible, that these models cannot really predict a stroke or which factor could increase the risk of having a stroke. There are two factors that contribute to leading us to the conclusion. On the one hand, the data itself may not be comprehensive enough to precisely predict a stroke. On the other hand, the dataset is very imbalanced, skewing heavily towards non-stroke outcomes. Perhaps further analysis would have to be done with a more balanced dataset, or we would have to reduce our dataset to make it more balanced. With the very limited stroke outcomes in this dataset, however, a fully adjusted dataset for balanced would have resulted in too small of a sample in our case with the data at hand.
 \newpage
