--- a/sioux_mach_learn_project.Rmd
+++ b/sioux_mach_learn_project.Rmd
@@ -28,7 +28,7 @@ header-includes:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, messages = FALSE)
-packages <- c("dplyr","readxl", "curl", "ggplot2", "ggrepel", "maps", "plotly", "stringr", "tm", "wordcloud2", "tidyverse", "RColorBrewer", "ggwordcloud", "viridis", "bookdown", "utils", "leaps", "broom","GGally", "e1071", "caret", "mgcv", "imbalance", "MLmetrics")
+packages <- c("dplyr","readxl", "curl", "ggplot2", "ggrepel", "maps", "plotly", "stringr", "tm", "wordcloud2", "tidyverse", "RColorBrewer", "ggwordcloud", "viridis", "bookdown", "utils", "leaps", "broom","GGally", "e1071", "caret", "mgcv", "imbalance", "MLmetrics", "neuralnet")
 package.check <- lapply(packages, FUN = function(x) {
     if (!require(x, character.only = TRUE)) {
         install.packages(x, dependencies = TRUE)
@@ -680,7 +680,7 @@ test_pred_grid <- predict(svm_linear_grid, newdata = testing)
 test_pred_grid 
 ```
 
-With the new test_pred_grid we can achieve an Accuracy of 95% which meand we could improve our model about 1%. 
+With the new test_pred_grid we can achieve an Accuracy of 95% which meand we could improve our model about 1%. But the Specifictiy has been come down to 0 therefore the tuned model does not seems to be better than our original one. 
 
 ```{r}
 confusionMatrix(table(test_pred_grid, testing$stroke))
